Fixing email wrapping in show user Dashboard Page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -156,6 +156,10 @@ a:active {
   padding: 2px 8px 2px 8px;
 }
 
+.user-email {
+  word-wrap: break-word;
+}
+
 #map {
     height: 300px;
     }
